--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 			padding-left: 3px;
 			font-size: 16px;
 			color:black;
+			
+
 		}
+
 
 		img{
 
@@ -60,9 +63,14 @@
 		footer{
 			position: fixed;
 			bottom:0;
-			width:1000%;
+			width:100%;
 			background-color: lightgray;
 			color:gray;
+			left:0;	
+			padding-bottom: 10px;
+			padding-top: 5px;
+
+
 
 		}
 
@@ -78,6 +86,8 @@
 			padding-right: 5px;
 			left: 0;
 			color:gray;
+			
+
 
 
 		}
@@ -86,6 +96,7 @@
 			list-style-type: none;
 			float:right;
 			padding-right: 5px;
+			padding-left: 5px;
 			color:gray;
 		}
 		#menu-burger div{
@@ -110,7 +121,7 @@
 			<a href="#"><li></li></a>
 		</ul>
 	</nav>
-	<img src="logo.png" alt="google-logo"">
+	<img src="logo.png" alt="google-logo">
 
 
 	<input type="text" name="search-box" id="search-box">
@@ -122,6 +133,7 @@
 		<ul class="country">
 			<li>South Africa</li>
 		</ul>
+		<hr>
 		<ul id="footer-align-left">
 			<a href="#" target="_blank"><li>Advertising</li></a>
 			<a href="#" target="_blank"><li>Business</li></a>
